--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "firstProgram",
+            "request": "launch",
+            "mainClass": "myPackage.firstProgram",
+            "projectName": "myProject"
+        },
+        {
             "name": "(gdb) Bash on Windows Launch",
             "type": "cppdbg",
             "request": "launch",
@@ -17,7 +24,9 @@
             "pipeTransport": {
                 "debuggerPath": "/usr/bin/gdb",
                 "pipeProgram": "${env:windir}\\system32\\bash.exe",
-                "pipeArgs": ["-c"],
+                "pipeArgs": [
+                    "-c"
+                ],
                 "pipeCwd": ""
             },
             "setupCommands": [
@@ -78,6 +87,5 @@
                 }
             ]
         }
-
     ]
 }
