--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "calculater_17",
+            "request": "launch",
+            "mainClass": "calculater_17",
+            "projectName": "coding_50b18b23"
+        },
+        {
+            "type": "java",
             "name": "average_of_3num_16",
             "request": "launch",
             "mainClass": "average_of_3num_16",
