--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "continue_statment_22",
+            "request": "launch",
+            "mainClass": "continue_statment_22",
+            "projectName": "coding_50b18b23"
+        },
+        {
+            "type": "java",
+            "name": "keep_entering_21",
+            "request": "launch",
+            "mainClass": "keep_entering_21",
+            "projectName": "coding_50b18b23"
+        },
+        {
+            "type": "java",
             "name": "reverce_number_20",
             "request": "launch",
             "mainClass": "reverce_number_20",
