--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "java/java_Basics/src",
         "java/DSA/A_array",
         "java/NIET_JAVApro"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
